# UA

./: README.md
primeiro ano/1semestre/FP/: datas final.py  desktop.ini  extra3.rar
primeiro ano/1semestre/FP/Random/: cena.py  fibonacci.py  futebol.py  list.py  removeSubstring.py  stocks.py  vagoes.py
primeiro ano/1semestre/FP/apx2/: shop1treino.py
primeiro ano/1semestre/FP/aula01/: points.py
primeiro ano/1semestre/FP/aula02/: telefones.py
primeiro ano/1semestre/FP/aula03/: coutdown.py  fibonaci.py
primeiro ano/1semestre/FP/aula04/: fatorial.py  fibonaci.py  hilo.py  primo.py  sequenceUn.py  table.py  turtle1.py
primeiro ano/1semestre/FP/aula05/: caracter is upper.py  countlawer.py  lista contar.py  removeajacent.py  telephones.py
primeiro ano/1semestre/FP/aula06/: aula6-1.py  exe6.py  (+4 more)
primeiro ano/2semestre/MSF/: 4ckKoI1.py  Para fazer o gráfico da lei do movimento do carro.docx  UsefullStuff.py
primeiro ano/coisas de teste/114196/: 114196.rar
primeiro ano/coisas de teste/MSF teste2/: Bicicleta(subidaedescida).py  bolatenisbatidarentechao.py  chutecomesemresistencia.py  ciclistasamadores.py  empurrão.py  goloefeito.py  mola.py  osciladorduplo.py  pendolo.py  regressãolinear.py  tenis.py
segundo ano/AED/AED-C/: CMakeLists.txt
segundo ano/AED/AED-C++/: CMakeLists.txt
segundo ano/AED/AED-C++/aula13/: Circle.cpp  Square.cpp
segundo ano/AED/AED-C/10aula/: BSTree.c  Date.c  Person.c  PersonSet.c  PointersQueue.c
segundo ano/AED/AED-C/11aula/: FileMerge.c  FileReader.c  HashTable.c  KLongestWords.c  MinHeap.c  MinHeapTest.c  TopKValues.c
segundo ano/AED/AED-C/12aula/: GraphBFSWithQueue.c  GraphDFSRec.c  GraphDFSWithStack.c  IntegersStack.c
segundo ano/AED/AED-C/1aula/: comandos de executar  hello.c  javatoC.c  listasdearrays.c  listsizeof.c  tabela  tabela.c  warnings.c
segundo ano/AED/AED-C/2aula/: arrays.c  binary_search(corrigido).c  binary_search(errada).c  coeficientesn.c  integer_arithmetic_pitfalls.c  permute.c  primes(corrigido).c  primes(errado).c  strings.c
segundo ano/AED/AED-C/3aula/: Function_timing(respostas)  example(respostas)  factorião.c  functions_iterations_count.c  functions_timing.c
segundo ano/AED/AED-C/4aula/: elimineiguaisoudiferentes.c  ncomparation.c  sequência(desordenada).c  sequência.c
segundo ano/AED/AED-C/5aula/: algoritmorecursivo1.c  algoritmorecursivo2.c  algoritmorecursivo3.c
segundo ano/AED/AED-C/6aula/: delannoyR.c
segundo ano/AED/AED-C/7aula/01_STACK_and_QUEUE_example/: 01_example.c  IntegersStack.c
segundo ano/AED/AED-C/7aula/02_DATE_and_PERSON/: Person.c
segundo ano/AED/AED-C/8aula/: PersonSet.c
segundo ano/AED/AED-C/9aula/: PersonSet.c  SortedList.c
segundo ano/SM/SM-pratica1/: quantizacao.m  sec_to_t.m
(+710 files in other folders)
