cmake_minimum_required(VERSION 3.26)
project(AED C)

set(CMAKE_C_STANDARD 11)

add_executable(AED main.c
        "1aula/listasdearrays.c"
        1aula/warnings.c
        1aula/hello.c
        1aula/tabela.c
        1aula/listsizeof.c
        1aula/javatoC.c
        2aula/integer_arithmetic_pitfalls.c
        "2aula/binary_search(errada).c"
        "2aula/primes(errado).c"
        2aula/permute.c
        2aula/strings.c
        2aula/arrays.c
        2aula/coeficientesn.c
        "2aula/binary_search(corrigido).c"
        "2aula/primes(corrigido).c"
        3aula/functions_iterations_count.c
        3aula/functions_timing.c
        3aula/examples.c
        3aula/factorião.c
        "3aula/Function_timing(respostas)"
        3aula/armstrong.c
        4aula/ncomparation.c
        4aula/sequência.c
        "4aula/sequência(desordenada).c"
        4aula/elimineiguaisoudiferentes.c
        5aula/algoritmorecursivo1.c
        5aula/algoritmorecursivo2.c
        5aula/algoritmorecursivo3.c
        "6aula/delannoyR.c"
        7aula/01_STACK_and_QUEUE_example/01_example.c
        7aula/01_STACK_and_QUEUE_example/IntegersQueue.c
        7aula/01_STACK_and_QUEUE_example/IntegersStack.c
        7aula/02_DATE_and_PERSON/Date.c
        7aula/02_DATE_and_PERSON/Person.c
        7aula/02_DATE_and_PERSON/Tests.c
        8aula/PersonSet.c
        8aula/Date.c
        8aula/Person.c
        8aula/Tests.c
        9aula/Person.c
        9aula/Date.c
        9aula/PersonSet.c
        9aula/SortedList.c
        9aula/SortedListTest1.c
        9aula/SortedListTest2.c
        9aula/Tests.c
        11aula/MinHeap.c
        11aula/KLongestWords.c
        11aula/MinHeapTest.c
        11aula/HashTable.c
        11aula/FileMerge.c
        11aula/FileReader.c
        11aula/TopKValues.c
        10aula/BSTree.c
        10aula/BSTreeTest.c
        10aula/Date.c
        10aula/Person.c
        10aula/PersonSet.c
        10aula/PointersQueue.c
        10aula/Tests.c
        12aula/GraphBFSWithQueue.c
        12aula/GraphDFSRec.c
        12aula/GraphDFSWithStack.c
        12aula/IntegersQueue.c
        12aula/IntegersStack.c
        12aula/SortedList.c
)
